add page for pokemon

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Pokemons</title>
+    <link rel="stylesheet" href="static/css/pokemonpage.css"/>
     <link rel="stylesheet" href="static/css/pagination.css"/>
   </head>
   <body>
